# gameConnect

./: CMakeLists.txt  gameConnectConfig.cmake  gameConnectTargets.cmake
example/: CMakeLists.txt
example/example_client/: CMakeLists.txt
example/example_client/src/: example_client.cpp
example/example_server/: CMakeLists.txt
example/example_server/src/: example_server.cpp
example/example_service/: CMakeLists.txt
example/example_service/include/example_service/authorization/: authorization.hpp
example/example_service/src/authorization/: authorization.cpp
example/example_service_client/: CMakeLists.txt
example/example_service_client/include/example_service_client/authorization/: authorization.hpp
example/example_service_client/src/: example_service_client.cpp
example/loguru/: CMakeLists.txt
example/loguru/include/loguru/: loguru.hpp
example/loguru/src/: loguru.cpp
example/protos/: CMakeLists.txt
gameConnect_server/: CMakeLists.txt
gameConnect_server/include/gameConnect_server/: gameConnect_server.hpp
gameConnect_server/src/: gameConnect_server.cpp
gameConnect_serviceClient/: CMakeLists.txt
gameConnect_serviceClient/include/gameConnect_serviceClient/: gameConnect_serviceClient.hpp
gameConnect_serviceClient/src/: gameConnect_serviceClient.cpp
protos/: CMakeLists.txt
protos/protos/: authorization.proto  operation.proto  stream.proto
server/: CMakeLists.txt
server/include/server/: server.hpp
server/src/: server.cpp
serviceClient/: CMakeLists.txt
serviceClient/include/serviceClient/: serviceClient.hpp
serviceClient/src/: serviceClient.cpp
